tests/valid/global_variables/fun_shadowed_by_variable.rs
/*
return: 5
*/

foo(): int {
    return 3;
}

main(): int {
    foo: int = 5;
    return foo;
}