tests/invalid/global_variables/variable_used_as_fun.rs
/*
fail: 1
*/

foo: int = 3;

main(): int {
    return foo();
}